--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Link to the CSS file -->
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="./index.css">
     <title>Awesome Books</title>
 </head>
 
@@ -67,7 +67,7 @@
         <p id="last-paragraph">&copy; 2023 Awesome Books</p>
     </footer>
     <!-- Link to The Javascript File -->
-    <script src="./index.js"></script>
+    <script type="module" src="./index.js"></script>
 </body>
 
 </html>
